<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnnext"
        android:layout_width="170dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="104dp"
        android:fontFamily="monospace"
        android:text="@string/lorentz_formula"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#FC2382"
        app:layout_constraintBottom_toTopOf="@+id/spibtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/spibtn"
        android:layout_width="170dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="248dp"
        android:fontFamily="monospace"
        android:text="@string/spi_factor1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#FC2382"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="383dp"
        android:layout_height="130dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/mathify"
        android:textAlignment="center"
        android:textColor="#101A65"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnnext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:layout_marginBottom="4dp"
        android:text="@string/made_for_spider_inductions"
        android:textAlignment="center"
        android:textColor="#5C5656"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>